--- a/index.html
+++ b/index.html
@@ -47,18 +47,19 @@
           <h2 class="section-title" id="about-title">Sobre Mim</h2>
           <p class="content-text" id="about-text">Olá! Bem-vindo à minha página pessoal. Aqui você pode conhecer um pouco mais sobre mim, minha jornada, minhas paixões e o que me inspira todos os dias.</p>
           <div class="photo-grid">
+            
             <div class="photo-placeholder large">
-              <img src="eu.jpg" alt="Minha foto" class="page-image">
-            </div>
+              <img src="eu.jpg" alt="Foto principal" class="page-image">
+              <div class="photo-caption">Foto principal</div> </div>
             <div class="photo-placeholder">
               <img src="niver.jpg" alt="Momentos especiais" class="page-image">
-            </div>
+              <div class="photo-caption">Momentos especiais</div> </div>
             <div class="photo-placeholder">
               <img src="medalha.jpg" alt="Minhas conquistas" class="page-image">
-            </div>
+              <div class="photo-caption">Minhas conquistas</div> </div>
             <div class="photo-placeholder">
               <img src="cafe.jpg" alt="Minhas paixões" class="page-image">
-            </div>
+              <div class="photo-caption">Minhas paixões</div> </div>
           </div>
         </div>
 
@@ -68,16 +69,16 @@
           <div class="photo-grid">
             <div class="photo-placeholder">
               <img src="cds1.jpg" alt="Foto do meu curso" class="page-image">
-            </div>
+              <div class="photo-caption">Os mais mais do szy</div> </div>
             <div class="photo-placeholder">
-              <img src="turmacds.jpg" alt="Foto da universidade" class="page-image">
-            </div>
+              <img src="turmacds.jpg" alt="Turma 2°CDS" class="page-image">
+              <div class="photo-caption">Foto da universidade</div> </div>
             <div class="photo-placeholder">
               <img src="passeioCDS.jpg" alt="Minha área de estudo" class="page-image">
-            </div>
+              <div class="photo-caption">Passeios</div> </div>
             <div class="photo-placeholder">
               <img src="feira.jpg" alt="Projeto acadêmico" class="page-image">
-            </div>
+              <div class="photo-caption">Projeto pra Feira de Profissões</div> </div>
           </div>
         </div>
 
@@ -87,16 +88,16 @@
           <div class="photo-grid">
             <div class="photo-placeholder">
               <img src="amigos.jpeg" alt="Foto com meus amigos" class="page-image">
-            </div>
+              <div class="photo-caption">Foto com meus amigos</div> </div>
             <div class="photo-placeholder">
               <img src="niverpt2.jpg" alt="Festa com amigos" class="page-image">
-            </div>
+              <div class="photo-caption">Festa com amigos</div> </div>
             <div class="photo-placeholder">
               <img src="gabi.jpg" alt="Amigos em um encontro" class="page-image">
-            </div>
+              <div class="photo-caption">Amigos em um encontro</div> </div>
             <div class="photo-placeholder">
               <img src="tlc.jpg" alt="Bons momentos com amigos" class="page-image">
-            </div>
+              <div class="photo-caption">boas memorias</div> </div>
           </div>
         </div>
 
@@ -106,16 +107,16 @@
           <div class="photo-grid">
             <div class="photo-placeholder">
               <img src="familia.jpg" alt="Foto da minha família" class="page-image">
-            </div>
+              <div class="photo-caption">Foto da minha família</div> </div>
             <div class="photo-placeholder">
               <img src="family.jpg" alt="Momentos felizes em família" class="page-image">
-            </div>
+              <div class="photo-caption">Momentos felizes em família</div> </div>
             <div class="photo-placeholder">
               <img src="family22.jpg" alt="Reunião de família" class="page-image">
-            </div>
+              <div class="photo-caption">Foto em família</div> </div>
             <div class="photo-placeholder">
               <img src="nivervo.jpg" alt="Celebração familiar" class="page-image">
-            </div>
+              <div class="photo-caption">Celebração familiar</div> </div>
           </div>
         </div>
 
@@ -124,17 +125,17 @@
           <p class="content-text" id="dreams-text">Sonhar é essencial para crescer. Aqui compartilho minhas aspirações, objetivos e tudo aquilo que me motiva a seguir em frente todos os dias.</p>
           <div class="photo-grid">
             <div class="photo-placeholder">
-              <img src="engmac.jpg" alt="Meus objetivos" class="page-image">
-            </div>
+              <img src="engmac.jpg" alt="Engenharia Mecânica" class="page-image">
+              <div class="photo-caption">Engenharia Mecânica</div> </div>
             <div class="photo-placeholder">
-              <img src="casamnto.jpg" alt="Minhas metas de vida" class="page-image">
-            </div>
+              <img src="casamnto.jpg" alt="Casamento e Família" class="page-image">
+              <div class="photo-caption">Casamento e Família</div> </div>
             <div class="photo-placeholder">
-              <img src="viagem.jpg" alt="Minhas inspirações" class="page-image">
-            </div>
+              <img src="viagem.jpg" alt="Viagem pelo mundo" class="page-image">
+              <div class="photo-caption">Viagem pelo mundo</div> </div>
             <div class="photo-placeholder">
-              <img src="casa.jpg" alt="Meu futuro" class="page-image">
-            </div>
+              <img src="casa.jpg" alt="Minha futura casa" class="page-image">
+              <div class="photo-caption">Minha futura casa</div> </div>
           </div>
         </div>
       </main>
