--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <div id="course" class="page">
           <h2 class="section-title" id="course-title">Meu Curso</h2>
-          <p class="content-text" id="course-text">Estou fazendo Ensino Médio com técnico de Desenvilvimrnto de Sistemas no Szymanski. Aqui vão algumas fotos da minha turma.</p>
+          <p class="content-text" id="course-text">Estou fazendo Ensino Médio com técnico de Desenvilvimrnto de Sistemas no Szymanski. Aqui vão algumas fotos da minha turma e projetos.</p>
           <div class="photo-grid">
             <div class="photo-placeholder">
               <img src="cds1.jpg" alt="Foto do meu curso" class="page-image">
