--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <div class="photo-caption">Os mais mais do szy</div> </div>
             <div class="photo-placeholder">
               <img src="turmacds.jpg" alt="Turma 2°CDS" class="page-image">
-              <div class="photo-caption">Foto da universidade</div> </div>
+              <div class="photo-caption">Turma 2°CDS</div> </div>
             <div class="photo-placeholder">
               <img src="passeioCDS.jpg" alt="Minha área de estudo" class="page-image">
               <div class="photo-caption">Passeios</div> </div>
